--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "nuxt-auth-utils": "^0.0.24"
   },
   "devDependencies": {
+    "@iconify-json/logos": "^1.1.42",
     "@iconify-json/simple-icons": "^1.1.101",
+    "@iconify-json/tabler": "^1.1.113",
     "@nuxt/devtools": "^1.3.1",
     "eslint": "^9.2.0",
     "lint-staged": "^15.2.2",
